--- a/assets/css/v2.css
+++ b/assets/css/v2.css
@@ -44,6 +44,7 @@
     padding: 5px 10px;
     border-radius: 15px;
     font-size: 13px;
+    user-select: none;
 }
 
 .category:hover {
@@ -58,4 +59,9 @@
 #search{
     display: flex;
     justify-content: space-between;
+}
+
+.category.active{
+    background: var(--accent);
+    color: var(--first);
 }
