--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,11 @@ button{
     user-select: none;
 }
 
+.active {
+    opacity: 100 !important;
+    z-index: 1 !important;
+}
+
 .separator {
     background: var(--sixth);
     height: 1px;
@@ -195,20 +200,15 @@ button:hover {
     z-index: -1;
 }
 
-#upload.active {
-    opacity: 1;
-    z-index: 1;
-}
-
 #upload-content {
     background: var(--fifth);
-    padding: 15px;
+    padding: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 5px;
-    gap: 5px;
+    border-radius: 15px;
+    gap: 15px;
     min-width: 50vw;
 }
 
@@ -230,4 +230,28 @@ button:hover {
 
 #upload-title:focus, #upload-title:focus{
     outline: none;
+}
+
+#notification{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 7px;
+    background: var(--first);
+    padding: 20px 25px;
+    border-radius: 100px;
+    opacity: 0;
+    z-index: -1;
+}
+
+#notification ion-icon{
+    font-size: 20px;
+    color: #5cda3c;
+}
+
+#notification p{
+    font-size: 15px;
 }
