--- a/assets/css/drive.css
+++ b/assets/css/drive.css
@@ -8,6 +8,9 @@
     --sixth: #808080;
     --search-height: 60px;
     --search-width: 500px;
+    --link-cursor: url("../cursors/Link.cur"), pointer;
+    --normal-cursor: url("../cursors/Normal.cur"), default;
+    --text-cursor: text;
 }
 
 * {
@@ -15,6 +18,7 @@
     color: var(--second);
     box-sizing: border-box;
     transition: 0.3s;
+    cursor: var(--normal-cursor);
 }
 
 body {
@@ -24,4 +28,57 @@ body {
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
+}
+
+#drive-list {
+    width: 100vw;
+    height: 100vh;
+    padding: 20px;
+}
+
+#drive-rows {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.drive-header {
+    margin-bottom: 5px;
+}
+
+.drive-row,
+.drive-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.drive-col {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 7px 10px;
+    border-radius: 20px;
+}
+
+.drive-header .drive-col:hover {
+    background: red;
+    cursor: var(--link-cursor);
+}
+
+.title {
+    width: 30%;
+}
+
+.filesize {
+    width: 20%;
+}
+
+.lastmodified {
+    width: 20%;
+}
+
+.keywords {
+    width: 30%;
 }
