--- a/assets/css/drive.css
+++ b/assets/css/drive.css
@@ -19,7 +19,11 @@
     color: var(--second);
     box-sizing: border-box;
     transition: 0.3s;
-    cursor: var(--normal-cursor);
+}
+
+.active{
+    z-index: 1 !important;
+    opacity: 100 !important;
 }
 
 body {
@@ -29,6 +33,7 @@ body {
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
+    cursor: var(--normal-cursor);
 }
 
 #drive-list {
@@ -40,11 +45,6 @@ body {
 #drive-rows {
     display: flex;
     flex-direction: column;
-    gap: 5px;
-}
-
-.drive-header {
-    margin-bottom: 5px;
 }
 
 .drive-row,
@@ -53,6 +53,9 @@ body {
     align-items: center;
     justify-content: center;
     gap: 5px;
+    border-bottom: 1px solid var(--third);
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .drive-col {
@@ -61,7 +64,18 @@ body {
     align-items: center;
     padding: 7px 10px;
     border-radius: 20px;
+    gap: 10px;
 }
+
+.drive-col ion-icon {
+    font-size: 19px;
+}
+
+#drive-rows .drive-row:hover {
+    background: var(--accent);
+    cursor: var(--link-cursor);
+}
+
 
 .drive-header .drive-col:hover {
     background: var(--accent);
@@ -109,4 +123,25 @@ body {
 
 #upload-button:hover {
     background: var(--accent-hover);
+}
+
+#player-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(7px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    opacity: 0;
+    padding: 20px;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    cursor: var(--link-cursor);
 }
