--- a/assets/css/drive.css
+++ b/assets/css/drive.css
@@ -3,25 +3,32 @@
     --accent-hover: #e6ba0d;
     --first: #0c0c14;
     --second: #fff;
-    --third: #272727;
+    --third: #1c1d22;
     --fourth: #18191e;
-    --fifth: #0c0c14;
+    --fifth: #181822;
     --sixth: #808080;
     --search-height: 60px;
     --search-width: 500px;
     --link-cursor: url("../cursors/Link.cur"), pointer;
     --normal-cursor: url("../cursors/Normal.cur"), default;
     --text-cursor: text;
+    --search-height: 50px;
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--second);
     box-sizing: border-box;
     transition: 0.3s;
+    font-size: 1rem;
 }
 
-.active{
+::selection{
+    background: var(--second);
+    color: var(--first);
+}
+
+.active {
     z-index: 1 !important;
     opacity: 100 !important;
 }
@@ -36,10 +43,38 @@ body {
     cursor: var(--normal-cursor);
 }
 
-#drive-list {
+#app {
+    padding: 15px;
     width: 100vw;
     height: 100vh;
-    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+header {
+    height: var(--search-height);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#search{
+    background: var(--first);
+    width: 500px;
+    outline: none;
+    border: 1px solid var(--third);
+    border-radius: 100px;
+    padding: 10px 20px;
+}
+
+#drive-list {
+    width: 100%;
+    height: calc(100% - var(--search-height));
+    border: 1px solid var(--third);
+    background: var(--first);
+    border-radius: 5px;
+    padding: 15px;
 }
 
 #drive-rows {
@@ -52,10 +87,16 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
     border-bottom: 1px solid var(--third);
-    padding-bottom: 5px;
-    padding-top: 5px;
+}
+
+.drive-row {
+    padding: 5px 0;
+    gap: 5px;
+}
+
+.drive-header .drive-col {
+    padding: 12px 10px;
 }
 
 .drive-col {
@@ -63,7 +104,6 @@ body {
     display: flex;
     align-items: center;
     padding: 7px 10px;
-    border-radius: 20px;
     gap: 10px;
 }
 
@@ -72,45 +112,45 @@ body {
 }
 
 #drive-rows .drive-row:hover {
-    background: var(--accent);
+    background: var(--fifth);
     cursor: var(--link-cursor);
 }
 
-
 .drive-header .drive-col:hover {
-    background: var(--accent);
+    background: var(--fifth);
     cursor: var(--link-cursor);
 }
 
 .title {
-    width: 30%;
+    width: 73%;
 }
 
 .filesize {
-    width: 20%;
+    width: 12%;
 }
 
 .lastmodified {
-    width: 20%;
+    width: 15%;
 }
 
 .keywords {
     width: 30%;
+    display: none;
 }
 
 #upload-button {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5px;
-    background: var(--accent);
     border-radius: 100px;
     padding: 0 20px;
     cursor: var(--link-cursor);
-    border: 1px solid var(--accent-hover);
+    border: 1px solid var(--third);
+    background: var(--third);
 }
 
 #upload-button * {
@@ -118,11 +158,11 @@ body {
 }
 
 #upload-button ion-icon {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 #upload-button:hover {
-    background: var(--accent-hover);
+    background: var(--fifth);
 }
 
 #player-container {
@@ -140,8 +180,75 @@ body {
     padding: 20px;
 }
 
-img{
+img {
     width: 100%;
     height: 100%;
     cursor: var(--link-cursor);
+}
+
+#upload-container {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(7px);
+    z-index: -1;
+    opacity: 0;
+}
+
+#upload {
+    background: var(--first);
+    margin: 0;
+    padding: 15px 30px;
+    border-radius: 100px;
+}
+
+.pending-input {
+    background: var(--third);
+    border: none;
+    outline: none;
+    padding: 5px 15px;
+    border-radius: 100px;
+    width: 150px;
+}
+
+.pending {
+    padding: 0;
+}
+
+.pending-check {
+    padding: 2px;
+    border-radius: 3px;
+}
+
+.pending-check:hover {
+    background: var(--third);
+}
+
+/* #drive-rows .pending:hover {
+    background: transparent !important;
+} */
+
+#notification {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    background: var(--first);
+    border-radius: 100px;
+    padding: 0 20px;
+    transform: translateX(120%);
+}
+
+#notification.enabled {
+    transform: none;
+}
+
+#notification ion-icon {
+    color: #0db30d;
 }
