--- a/assets/css/drive.css
+++ b/assets/css/drive.css
@@ -15,6 +15,29 @@
     --search-height: 50px;
 }
 
+/* width */
+::-webkit-scrollbar {
+    width: var(--scrollbar-width);
+    height: 8px;
+    background: var(--fourth);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--third);
+    border-radius: 10px;
+    cursor: var(--link-cursor);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #585858;
+}
+
+::-webkit-scrollbar-corner {
+    display: none;
+}
+
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--second);
@@ -23,7 +46,7 @@
     font-size: 1rem;
 }
 
-::selection{
+::selection {
     background: var(--second);
     color: var(--first);
 }
@@ -31,6 +54,10 @@
 .active {
     z-index: 1 !important;
     opacity: 100 !important;
+}
+
+.reversed {
+    transform: scale(-1, -1);
 }
 
 body {
@@ -59,9 +86,10 @@ header {
     align-items: center;
 }
 
-#search{
+#searchbar {
     background: var(--first);
     width: 500px;
+    max-width: 100%;
     outline: none;
     border: 1px solid var(--third);
     border-radius: 100px;
@@ -99,16 +127,26 @@ header {
     padding: 12px 10px;
 }
 
+.sortingOrder {
+    font-size: 17px !important;
+    opacity: 0;
+    z-index: -1;
+}
+
 .drive-col {
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     padding: 7px 10px;
     gap: 10px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .drive-col ion-icon {
     font-size: 19px;
+    min-width: 19px;
 }
 
 #drive-rows .drive-row:hover {
@@ -252,12 +290,81 @@ img {
     border-radius: 100px;
     padding: 0 20px;
     transform: translateX(120%);
+    border: 1px solid var(--third);
 }
 
 #notification.enabled {
     transform: none;
 }
 
-#notification ion-icon {
+#notification ion-icon[name="checkmark-outline"] {
     color: #0db30d;
+}
+
+#notification ion-icon[name="close-outline"] {
+    color: #d21616;
+}
+
+#location {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin: 0 15px;
+}
+
+.location {
+    font-size: 20px;
+    padding: 10px 15px;
+    border-radius: 100px;
+    margin: 10px 0;
+    cursor: var(--link-cursor);
+}
+
+.location:hover {
+    background: var(--fifth);
+}
+
+@media screen and (max-width: 800px) {
+    .title {
+        width: 50%;
+    }
+
+    .lastmodified {
+        width: 27%;
+    }
+
+    .path {
+        display: none;
+    }
+
+    .filesize {
+        width: 15%;
+    }
+
+    #notification {
+        bottom: 30px;
+        top: unset;
+        left: auto;
+        right: auto;
+        transform: translateY(200%);
+    }
+}
+
+
+@media screen and (max-width: 500px) {
+    .title {
+        width: 75%;
+    }
+
+    .lastmodified {
+        display: none;
+    }
+
+    .filesize {
+        width: 25%;
+    }
+
+    #location {
+        margin: 0;
+    }
 }
